[package]
name = "csv_validation"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "csv_validation"
crate-type = ["cdylib"]

[dependencies]
csv = "1.3.1"
flate2 = "1.1.0"
log = "0.4.26"
# abi3-py310 makes the wheels forward-compatible with 3.11, 3.12 ...
pyo3 = { version = "0.23.3", features = ["abi3-py310"] }
pyo3-log = "0.12.1"
regex = "1.11.1"
simple_logger = "5.0.0"
yaml-rust2 = "0.10.0"
serde = { version = "1.0.218", features = ["derive"] }
redb = "3.1.0"
tempfile = "3.10.1"

[features]
extension-module = ["pyo3/extension-module"]
default = []
